<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Faq_OrderingInquiries"
    android:background="@drawable/background1">

    <TextView
        android:id="@+id/article_heading2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:padding="@dimen/padding_regular"
        android:text="@string/ordering_inquiries"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/article_heading2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="187dp"
                android:layout_height="160dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/order" />

            <TextView
                android:id="@+id/ordering_subheading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_regular"
                android:text="@string/ordering_subtitle"
                android:textColor="#000000"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/article"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:textColor="#575757"
                android:lineSpacingExtra="@dimen/line_spacing"
                android:padding="@dimen/padding_regular"
                android:text="@string/ordering_text" />

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_regular"
                android:textColor="#000000"
                android:text="@string/ordering_subtitle2"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault"
                android:textSize="25sp" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:lineSpacingExtra="@dimen/line_spacing"
                android:padding="@dimen/padding_regular"
                android:textColor="#575757"
                android:text="@string/ordering_text2" />

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_regular"
                android:text="@string/ordering_subtitle3"
                android:textColor="#000000"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault"
                android:textSize="25sp" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:lineSpacingExtra="@dimen/line_spacing"
                android:padding="@dimen/padding_regular"
                android:textColor="#575757"
                android:text="@string/ordering_text3" />

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_regular"
                android:text="@string/ordering_subtitle4"
                android:textColor="#000000"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault"
                android:textSize="25sp" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:lineSpacingExtra="@dimen/line_spacing"
                android:padding="@dimen/padding_regular"
                android:textColor="#575757"
                android:text="@string/ordering_text4" />

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_regular"
                android:textColor="#000000"
                android:text="@string/ordering_subtitle5"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault"
                android:textSize="2sp" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:lineSpacingExtra="@dimen/line_spacing"
                android:padding="@dimen/padding_regular"
                android:textColor="#575757"
                android:text="@string/ordering_text5" />

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_regular"
                android:textColor="#000000"
                android:text="@string/ordering_subtitle6"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault"
                android:textSize="25sp" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:lineSpacingExtra="@dimen/line_spacing"
                android:padding="@dimen/padding_regular"
                android:textColor="#575757"
                android:text="@string/ordering_text6" />

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_regular"
                android:text="@string/ordering_subtitle7"
                android:textColor="#000000"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault"
                android:textSize="25sp" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:lineSpacingExtra="@dimen/line_spacing"
                android:padding="@dimen/padding_regular"
                android:textColor="#575757"
                android:text="@string/ordering_text7" />


        </LinearLayout>

    </ScrollView>

</RelativeLayout>