<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Faq_return"
    android:background="@drawable/background1">

    <TextView
        android:id="@+id/article_heading5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:padding="@dimen/padding_regular"
        android:text="@string/return_and_refund"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/article_heading5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="143dp"
                android:layout_height="153dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/refund1" />

            <TextView
                android:id="@+id/return_subheading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_regular"
                android:text="@string/return_subtitle"
                android:textColor="#000000"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/article"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:lineSpacingExtra="@dimen/line_spacing"
                android:padding="@dimen/padding_regular"
                android:text="@string/voucher_text" />

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_regular"
                android:textColor="#000000"
                android:text="@string/return_subtitle2"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault"
                android:textSize="25sp" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:lineSpacingExtra="@dimen/line_spacing"
                android:textColor="#575757"
                android:padding="@dimen/padding_regular"
                android:text="@string/return_text2" />

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_regular"
                android:textColor="#000000"
                android:text="@string/return_subtitle3"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault"
                android:textSize="25sp" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:lineSpacingExtra="@dimen/line_spacing"
                android:textColor="#575757"
                android:padding="@dimen/padding_regular"
                android:text="@string/return_text3" />
            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_regular"
                android:textColor="#000000"
                android:text="@string/return_subtitle4"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault"
                android:textSize="25sp" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:lineSpacingExtra="@dimen/line_spacing"
                android:padding="@dimen/padding_regular"
                android:textColor="#575757"
                android:text="@string/return_text4" />


        </LinearLayout>

    </ScrollView>

</RelativeLayout>